# wiki_llama

./: MANIFEST.in  README.md  Wiki_LLama.ipynb  pyproject.toml
src/templates/: answer_using_wiki.txt  query_wiki.txt
src/wiki_llama/: formatting.py  llama_agent.py  vectordb.py  wiki_data.py
