[build-system]
requires = ["setuptools", "setuptools-scm"]
requires-python = ">=3.10"
build-backend = "setuptools.build_meta"

[project]
name = "wiki_llama"
version = "0.1"

dependencies = ["langchain==0.0.325",
                "transformers==4.31.0",
                "wikipedia==1.4.0",
                "accelerate==0.21.0",
                "xformers==0.0.20",
                "sentence-transformers==2.2.2",
                "faiss-cpu==1.7.4",
               ]

[tool.setuptools.packages.find]
where = ["src"]
include = ["wiki_llama", "templates"]
